src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>FS_offInvoice__c</fullName>
        <description>Default value based on Distributor Type. Use as additional discounts for Opportunity Product in the TPR Calculation</description>
        <label>Off Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_onInvoice__c</fullName>
        <description>Default value based on Distributor Type. Use as additional discounts for Opportunity Product in the TPR Calculation</description>
        <label>On Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_supplyCost__c</fullName>
        <defaultValue>0.08</defaultValue>
        <description>Used in the TPR Calculation in Opportunity Products specifically for the calculation for Supply Chain Cost (SCC)</description>
        <label>Supply Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Email__c</fullName>
        <label>General Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Global_Unique_ID__c</fullName>
        <label>Global Unique ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gortons_Opt_in__c</fullName>
        <description>CEC - Opt-In requirements for the consumer</description>
        <label>Gortons Opt-in</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone_No_Special_Char__c</fullName>
        <label>Home Phone No Special Char</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICB_CNPJ__c</fullName>
        <description>Number of the Cadastro Nacional de Pessoa Jurídica of the customer.</description>
        <label>CNPJ</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICB_Mobile_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate which the account is a partner operator channel.</description>
        <label>Mobile Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyCustomerLevel4Code__c</fullName>
        <description>Purpose : A commercial grouping of accounts 
Data Source : NA | Integration : NA | Security Level : Restricted</description>
        <label>Banner</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyCustomerLevel4Name__c</fullName>
        <description>Purpose : A commercial grouping of accounts
Data Source : NA | Integration : NA | Security Level : Restricted</description>
        <label>BannerName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyCustomerLevel6Code__c</fullName>
        <description>Purpose : To display the Key Customer Level 1
Data Source : NA | Integration : NA | Security Level : Restricted</description>
        <label>Key Customer Level 6 Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyCustomerLevel6Name__c</fullName>
        <description>Purpose :To display Key Customer Level 1 Name 
Data Source : NA | Integration : NA | Security Level : Restricted</description>
        <label>Key Customer Level 6 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Consumer__c</fullName>
        <description>To identify a consumer as frequent caller</description>
        <inlineHelpText>Select type of consumer</inlineHelpText>
        <label>Known Consumer</label>
        <picklist>
            <picklistValues>
                <fullName>Frequent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest_Case_Number__c</fullName>
        <description>CEC : To store the latest case Number of the Account</description>
        <label>Latest Case Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Case_Product_Code__c</fullName>
        <description>cec_Latest Primary Case&apos;s product code</description>
        <label>Latest Case Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Case_Reason_Code__c</fullName>
        <description>cec_The latest primary Case&apos;s reason code for the consumer</description>
        <label>Latest Case Reason Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Designation__c</fullName>
        <description>Organisation&apos;s legal designation</description>
        <label>Legal Designation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_client_relationship__c</fullName>
        <description>Average length of client relationships</description>
        <inlineHelpText>What is the average length of client relationships?</inlineHelpText>
        <label>Length of client relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months to 1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - 5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - 10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Years +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Identifier_No_Special_Char__c</fullName>
        <description>CEC This field will hold 11 digits for Brazil user and for other users it will hold as value as Local Identifier</description>
        <label>Local Identifier No Special Char</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Identifier__c</fullName>
        <description>CEC Local Identifier  will hold CPF (government issued ID) for consumers</description>
        <label>Local Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Id__c</fullName>
        <description>TO: List of machine id of the customers</description>
        <label>Machine Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose : Master Account (Banner for Russia)
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Master)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_No_Special_Char__c</fullName>
        <externalId>true</externalId>
        <label>Mobile Phone No Special Char</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <description>Next review date for an agency</description>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Tea_drinkers__c</fullName>
        <description>TO: Number of tea drinkers</description>
        <label>No of Tea Drinkers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_No_Special_Char__c</fullName>
        <label>Other Phone No Special Char</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <formula>IF(
    Total_Rating_Count__c = 0,
    0,
    Total_Rating_Score__c / Total_Rating_Count__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership_Status__c</fullName>
        <description>Please clarify the ownership status of the company, identifying any network or holding company, where appropriate.</description>
        <inlineHelpText>Please clarify the ownership status of the company, identifying any network or holding company, where appropriate.</inlineHelpText>
        <label>Ownership Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_No_Special_Char__c</fullName>
        <description>CEC : Field which removes all the special characters(including whitespace) for the &apos;Phone&apos; field.</description>
        <label>Phone No Special Char</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Channel__c</fullName>
        <description>To identify a consumers preferred channel of contact</description>
        <label>Preferred Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile App</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Tea_Type__c</fullName>
        <description>TO: Preferred tea type</description>
        <label>Preferred Tea Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_infusion_type__c</fullName>
        <description>TO: Preferred infusion type</description>
        <label>Preferred Infusion Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Names__c</fullName>
        <description>Has your company operated under any other name within the last 10 years? If so, please specify.</description>
        <inlineHelpText>Has your company operated under any other name within the last 10 years? If so, please specify.</inlineHelpText>
        <label>Previous Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <description>TO : Profession</description>
        <label>Profession</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_B_Opt_in__c</fullName>
        <description>CEC - Opt-In requirements for the consumer</description>
        <label>R&amp;B Opt-in</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ratings_and_Reviews_Username__c</fullName>
        <description>CEC - Username that consumer uses when logging into communities such as Bazaarvoice</description>
        <label>Ratings and Reviews Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Purpose : Created to display region value from user object 
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>NFS Region</label>
        <picklist>
            <controllingField>Zone__c</controllingField>
            <picklistValues>
                <fullName>10007 Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10100 Non-Comm Region 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10200 Retail FS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10500 Redistribution - US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10600 Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10610 Club Stores - US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10620 Cash &amp; Carry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10800 C-Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53000 East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53010 Mid Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53015 Tri State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53020 New England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54100 Obsolete/Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54200 Pepsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55000 West Zone Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55005 Non-Comm Region 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55015 Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55020 North central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55030 South Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55035 Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55040 West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55045 West Client delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56005 Non-Comm Region 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56010 Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56015 Buying Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56020 Corporate Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56025 OCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59000 South CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59005 East CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59010 Redistribution - CA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <description>TO: Date of Website Registration</description>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requester_Comment__c</fullName>
        <description>Explain a person is requesting the creation of this account.</description>
        <inlineHelpText>Explain a person is requesting the creation of this account. This text is sent with the email notification to the manager and the administrator</inlineHelpText>
        <label>Requester Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Unilever_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Unilever Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retention_Date__c</fullName>
        <description>CEC-This field will get populated based on the case retention day logic</description>
        <label>Retention Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retention_Reason__c</fullName>
        <description>CEC-Retention Reason it populate value based on the case retention reason</description>
        <label>Retention Reason</label>
        <picklist>
            <picklistValues>
                <fullName>2-Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-Legal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retention_Record_Id__c</fullName>
        <description>CEC-Retention Record Id it  display the Id of the case which is related to Retention date.</description>
        <label>Retention Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Record__c</fullName>
        <formula>IF(ISBLANK(Retention_Record_Id__c),null,LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))  +  &apos;ui/support/servicedesk/ServiceDeskPage#/&apos; + Retention_Record_Id__c)</formula>
        <label>Retention Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_ID__c</fullName>
        <description>Purpose : External ID
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <externalId>true</externalId>
        <label>SAP ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_ORG__c</fullName>
        <label>Sales_ORG</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Purpose : This field describes the operator segment (important for reporting)
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise Travel Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Healthcare BusInd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Foodservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Caterers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pubs/Bars/Entertaining center/Caffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Take Away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canteens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Center Led</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Local Led</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Liquidator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D-Redistribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Office Coffee System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-C Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H-Retail Food Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-Meal Replacement Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Manufacturers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O-Operator/Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-C&amp;C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMS_Search_Mobile_Number__c</fullName>
        <description>CEC: Formula field is used to identify market specific accounts</description>
        <formula>Mobile_Phone_No_Special_Char__c +  TEXT(Owner.Market__c)</formula>
        <label>SMS Search Mobile Number</label>
        <type>Text</type>
    </fields>   
    <fields>
        <fullName>Status__c</fullName>
        <description>Purpose : Status
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marked For Deletion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Type Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Capabilities_Video__c</fullName>
        <label>Strategic Capabilities Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Strategic_Capabilities__c</fullName>
        <description>Max length 280 as defined by Unilever, to ensure visibility on the Agency List tool.</description>
        <label>Strategic Capabilities</label>
        <length>280</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubSegment__c</fullName>
        <description>Purpose : The value of this field are depended from Operator Segment
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Sub Segment</label>
        <picklist>
            <controllingField>Segment__c</controllingField>
            <picklistValues>
                <fullName>QSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Scale Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports &amp; Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business &amp; Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (C&amp;U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare/Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarkets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Segment Contract Caterer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace Canteens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcategories__c</fullName>
        <label>Subcategories</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Apple Farms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corn Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sun_Opt_In__c</fullName>
        <description>CEC - Opt-In requirements for the consumer</description>
        <label>Sun Opt-In</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tea_moment_of_the_day__c</fullName>
        <description>TO: Tea moment of the day</description>
        <label>Tea Moment of The Day</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tea_moment_of_the_week__c</fullName>
        <description>TO: Tea moment of the week</description>
        <label>Tea Moment of The Week</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Purpose : Created to display territory value from user object
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>NFS Territory</label>
        <picklist>
            <picklistValues>
                <fullName>55015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>82100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>82200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10620</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10200</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Rating_Count__c</fullName>
        <label>Total Rating Count</label>
        <summaryFilterItems>
            <field>ar_Rating_Review__c.Overall__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ar_Rating_Review__c.Overall__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ar_Rating_Review__c.Agency__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>